#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([fixpath], [1.0], [jimmy.venema@gmail.com])
AC_CONFIG_AUX_DIR([support])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([FixPath.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_CHECK_FUNCS([regcomp])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
